# name: test_snapshot_diff
  <class 'dict'> {
    'field_0': True,
    'field_1': 'no_value',
    'nested': <class 'dict'> {
      'field_0': 1,
    },
  }
---
# name: test_snapshot_diff.1
      ...
  -   'field_1': 'no_value',
  +   'field_1': 'yes_value',
      ...
---
# name: test_snapshot_diff.2
      ...
  -   'field_1': 'no_value',
  +   'field_1': 'yes_value',
      ...
  -     'field_0': 1,
  +     'field_0': 2,
    ...
---
# name: test_snapshot_diff_id.'case3'
      ...
  -   'field_1': 'no_value',
  +   'field_1': 'yes_value',
        ...
  -     'field_0': True,
  +     'field_0': 2,
          ...
---
# name: test_snapshot_diff_id.'large snapshot'
  <class 'dict'> {
    'field_0': True,
    'field_1': 'no_value',
    'field_2': 0,
    'field_3': None,
    'field_4': 1,
    'field_5': False,
    'field_6': <class 'tuple'> (
      True,
      'hey',
      2,
      None,
    ),
    'field_7': <class 'set'> {
      'no',
      False,
      None,
    },
    'nested': <class 'dict'> {
      'field_0': True,
      'field_1': 'no_value',
      'field_2': 0,
      'field_3': None,
      'field_4': 1,
      'field_5': False,
      'field_6': <class 'tuple'> (
        True,
        'hey',
        2,
        None,
      ),
      'field_7': <class 'set'> {
        'no',
        False,
        None,
      },
    },
  }
---
# name: test_snapshot_diff_id.1
      ...
  -   'field_1': 'no_value',
  +   'field_1': 'yes_value',
        ...
---
